# kafka-emulator

./: Makefile  README.md  pyproject.toml  release.env  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
docs/: scenario-spec.md  user-guide.md
scripts/: set-version.sh
src/kafka_emulator/: cli.py  duration.py  models.py  template_helpers.py
testing/: docker-compose.yaml  message1-text.json  message1.json  message2-built-in.json  message2.json  message3-helpers.json  message3.json  message4-random.json  message5-meta.json  message6.txt  scenario.yaml
tests/: test_cli.py  test_duration.py  test_models.py  test_template_helpers.py
tests/expected-output/: cli-help.txt  cli-help312.txt  cli-version.txt  cli-wrong-options.txt
