[project]
name = "kafka_emulator"
version = "1.0.0"
description = "Kafka Messages Emulator"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "kafka" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "Topic :: Communications"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kafka-python>=2.3.1",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "colorama>=0.4.6",
    "pydantic>=2.13.2",
]

[project.urls]
homepage = "https://github.com/siakhooi/kafka-emulator"
repository = "https://github.com/siakhooi/kafka-emulator"
documentation = "https://github.com/siakhooi/kafka-emulator/wiki"
"Bug Tracker" = "https://github.com/siakhooi/kafka-emulator/issues"

[project.scripts]
kafka-emulator = 'kafka_emulator.cli:run'


[tool.poetry]
packages = [{include = "kafka_emulator", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
